# WebPulse

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  docker-compose.yaml  package-lock.json  package.json
.github/workflows/: docker.yml
migrations/: 001_initial.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  web.rs
src/api/: heartbeat.rs  mod.rs  monitor.rs
src/models/: heartbeat.rs  history.rs  mod.rs  monitor.rs
src/services/: checker.rs  heartbeat_checker.rs  http_checker.rs  mod.rs  scheduler.rs
src/sse/: mod.rs
static/: input.css  output.css
templates/: base.html  monitors.html
templates/components/: edit_monitor_form.html  monitor_card.html  monitor_grid.html  monitor_history.html  new_monitor_form.html  stats.html
