[package]
name = "rustpulse"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "High-performance Uptime Checker"
authors = ["RustPulse"]
license = "MIT"

[dependencies]
axum = "0.8.9"
tower-http = { version = "0.6.8", features = ["fs"] }

tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }

sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }

reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

askama = "0.15.6"

toml = "1.1"

chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1", features = ["v4"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2"
anyhow = "1"

async-trait = "0.1"
async-stream = "0.3"
futures-core = "0.3"

[[bin]]
name = "rustpulse"
path = "src/main.rs"

[lib]
name = "rustpulse"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
